# ChangeLog for net-irc/unrealircd
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/unrealircd/ChangeLog,v 1.70 2008/08/23 01:20:34 cardoe Exp $

  09 May 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net>
  -unrealircd-3.2.7-r2.ebuild, -unrealircd-3.2.8.ebuild,
  unrealircd-3.2.8.1.ebuild:
  Removed old unrealircds - gentoo bug 260806, reduced KEYWORDS.

  14 Jan 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net> +unrealircd-system-tre.patch +unrealircd-system-cares.patch:
  Imported from portage tree, added patch that prevents unrealircd from statically linking to a bundled dev-libs/tre and net-dns/c-ares.
	
  23 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  11 Aug 2008; Ricardo Mendoza <ricmm@gentoo.org>
  unrealircd-3.2.7-r2.ebuild:
  Add ~mips, bug #199362

  22 Dec 2007; Ulrich Mueller <ulm@gentoo.org> -unrealircd-3.2.7.ebuild:
  Remove old revision wrt bug #201682.

  22 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  unrealircd-3.2.7-r2.ebuild:
  ppc stable, bug #201682

  12 Dec 2007; Raúl Porcel <armin76@gentoo.org> unrealircd-3.2.7-r2.ebuild:
  sparc/x86 stable wrt #201682

*unrealircd-3.2.7-r2 (12 Dec 2007)

  12 Dec 2007; Ulrich Mueller <ulm@gentoo.org> -unrealircd-3.2.7-r1.ebuild,
  +unrealircd-3.2.7-r2.ebuild:
  Set correct owner for the installed certificates, fixes bug #201996.
  Thanks to Attila Tóth <atoth@atoth.sote.hu> and Stefan Becker
  <stefan.becker@ip-exchange.de> for reporting and providing a patch.

  10 Dec 2007; Raúl Porcel <armin76@gentoo.org> unrealircd-3.2.7-r1.ebuild:
  sparc/x86 stable wrt #201682

  08 Oct 2007; Raúl Porcel <armin76@gentoo.org>
  -unrealircd-3.2.6-r1.ebuild:
  old

  06 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  unrealircd-3.2.7.ebuild:
  ppc stable, bug #193233

  25 Sep 2007; Raúl Porcel <armin76@gentoo.org> unrealircd-3.2.7.ebuild: