@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX unrealircd-system-cares-3.2.7.patch 5472 RMD160 d6e817e98b029c6a03e3e49fbcf636eddf6e8c64 SHA1 5b02b22ce79d8c1aa5622e967b974af274c26e3b SHA256 5ad9062bd3b2820476151f84fca810981f094f305d5eb43ca048d3f9de0d7dfe
 AUX unrealircd-system-cares-3.2.8.patch 4850 RMD160 6bd9456bda2b1dc233cf7ad97c60c0ee11c1f99b SHA1 e9086146a7031b874e514eb2a22c06b5decb8adf SHA256 e3be39af381c12349355ed44c1bfac1a205a84728d006fd3de3cff0a564ee0d9
 AUX unrealircd-system-cares.patch 4850 RMD160 6bd9456bda2b1dc233cf7ad97c60c0ee11c1f99b SHA1 e9086146a7031b874e514eb2a22c06b5decb8adf SHA256 e3be39af381c12349355ed44c1bfac1a205a84728d006fd3de3cff0a564ee0d9
@@ -5,6 +8,13 @@ AUX unrealircd-system-tre.patch 2238 RMD160 bfac0ded81b84eed017c8fac8ee6bffaa0a6
 AUX unrealircd.confd 499 RMD160 666439c6e992d3314f8694ba58e8f3e018421f1c SHA1 5cb49d7e9a79c7f8e0b2182dff47811a2f3fb885 SHA256 ae6ce779fae68c1380a7d37950c5ef3b695e434bb435dcdc0f6d3d2282f72582
 AUX unrealircd.rc 640 RMD160 186125558866976380eddae397aba4534a088732 SHA1 815d6950ddb79ca86fa8c887a4386ae9ddd58abe SHA256 a1ac6330e573dc5429153de98c9a8619a92d7ae3502a06e47f392dcaf90f2b07
 DIST Unreal3.2.8.1.tar.gz 2866456 RMD160 c8e76239e33ba170743f2ddae6bc24782064f105 SHA1 363c3c995bb38cf601f409610ce1937a0002c419 SHA256 009add8da68b6fb66608d06302e59fa9fb994f901cbd92e6f4f10963f2077741
-EBUILD unrealircd-3.2.8.1.ebuild 4668 RMD160 61a4283a897feb11103e8cd6a8b6e555645a60f9 SHA1 a742d313d5af770ac1e55aa53068fff32e98d700 SHA256 c26c644b8f164d40fc062cbfd21f138dd3437955ed3147cb88553b1df0a14996
-MISC ChangeLog 10287 RMD160 ad6753da63890f8771b2395275757a648b864054 SHA1 8eb476f0dac1e2c9f8aca372ee63b9fb189c7e8a SHA256 d58ed865ace3f27755aa261eab5dffbcf80c6f77f0e54ae486e39e853a805b56
-MISC metadata.xml 831 RMD160 1c4d3c26f080417af9af3b86d92315febfa31549 SHA1 f0697d35ac29692f18153216d46f3439a3c95410 SHA256 b71bc394366c609646cf3f371e9956ac27b854a4bda17cf6c934f1e95aa0a844
+EBUILD unrealircd-3.2.8.1-r1.ebuild 4830 RMD160 56403bfd13dd56aae5666722396acfbc9aa92b82 SHA1 054baab5e0975c4b92c3bd0ce63795e99a6651ff SHA256 89e2bfda5b13c76543cb4ebb7db0e956317e6a8e70956af186ce4fed38b88fd5
+MISC ChangeLog 10519 RMD160 5b80b1e3a8262a76da3e3c9bf9808950deded32b SHA1 29d44409ee8dfb3ba167f0007639cc6cee11d90b SHA256 e96be02156a756ba796ac686247e0771fa4d9b7d7f69f5a7cf8e57ad2db4d10a
+MISC metadata.xml 819 RMD160 4bc4922a0c4f88c0643d018afcdb34679042b100 SHA1 a0bed439fe30b577b0ee95c2c03f45e4f29f70fc SHA256 4f925bcc1a92f89073c936ae9b22ed8749a683fd80f0d40c15ac722f0936e934
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAkweFpAACgkQni8M22OVw8BwygCfaG5vbjp62ZYk1cNHnLuRmQNo
+gKMAn3XrnQyX3U4ivgNx5PZJIKS6SS6C
+=1m5l
+-----END PGP SIGNATURE-----
