@@ -1,6 +1,12 @@
 # ChangeLog for net-irc/unrealircd
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/net-irc/unrealircd/ChangeLog,v 1.70 2008/08/23 01:20:34 cardoe Exp $
+
+  20 Jun 2010; Nathan Phillip Brink (ohnobinki)
+  <ohnobinki@ohnopublishing.net> -unrealircd-3.2.8.1.ebuild,
+  +unrealircd-3.2.8.1-r1.ebuild:
+  Update ebuild to match portage version in many aspects but with a real
+  upstream URI.
 
   09 May 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net>
   -unrealircd-3.2.7-r2.ebuild, -unrealircd-3.2.8.ebuild,
